--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -4,6 +4,7 @@
   max-width: 768px;
   height: 82px;
   z-index: 3;
+  background-color: #fff;
 
   &__burger-menu_nav {
     padding-top: 120px;
@@ -30,6 +31,7 @@
   justify-content: space-between;
   border-radius: 0px 0px 10px 10px;
   background-color: $color-baground;
+  border: 1px solid #e2e8f0;
   padding: 20px;
   gap: 20px;
 }
