--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import "../styles/blocks/section_card";
 @import "../styles/blocks/section_card_small";
 @import "../styles/blocks/customer_reviews";
+@import "../styles/blocks/slide-show";
 @import "../styles/blocks/shower_accessories";
 @import "../styles/blocks/shower_walls";
 @import "../styles/blocks/showerheads";
