--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,7 +6,7 @@
   background-color: #fbdf8d;
   border: none;
   border-radius: 6px;
-  font-size: 18px;
+  font-size: 16px;
   color: #000;
   font-weight: 600;
   line-height: 21.78px;
@@ -37,6 +37,7 @@
   justify-content: center;
   max-width: 768px;
   margin: 0 auto;
+  background: #fff;
 }
 
 .top-actions-form {
@@ -44,8 +45,11 @@
   position: relative;
   align-items: center;
   justify-content: space-between;
+  height: 82px;
   background-color: #f9fafb;
-  padding: 5px;
+  padding: 0px 20px 0px 20px;
+  border: 1px solid #e2e8f0;
+  border-radius: 0px 0px 10px 10px;
 }
 
 .logo_img {
@@ -77,8 +81,8 @@
   height: 2px;
   width: 15px;
   transform: rotate(45deg);
-  top: 21px;
-  right: 17px;
+  top: 36px;
+  right: 32px;
 }
 
 .form-line2 {
@@ -86,8 +90,8 @@
   height: 2px;
   width: 15px;
   transform: rotate(-45deg);
-  top: 21px;
-  right: 17px;
+  top: 36px;
+  right: 32px;
 }
 
 /* !!!!!!  Popup form - схована за замовчуванням  */
@@ -98,7 +102,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   overflow: auto;
   z-index: 3;
 }
@@ -106,9 +110,10 @@
 .form-container {
   box-sizing: border-box;
   display: flex;
-  justify-content: center;
+  justify-content: start;
   flex-direction: column;
   max-width: 768px;
+  min-height: 100vh;
   padding: 10px;
   background-color: white;
   overflow: auto;
@@ -136,6 +141,7 @@
   text-align: left;
   width: 390px;
   margin: 10px 0 20px 20px;
+  color: #000;
 }
 .form__title--radio {
   font-family: Inter;
@@ -296,6 +302,7 @@ input.invalid {
   padding: 10px;
   z-index: 999;
   color: #991b1b;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .popup-img {
   position: fixed;
@@ -327,6 +334,7 @@ input.invalid {
   line-height: 22px;
   letter-spacing: 0.005em;
   text-align: left;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .success-message-img {
   position: fixed;
@@ -412,6 +420,7 @@ select {
   background: #fef2f2;
   border: 1px solid #ff8181;
   border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   font-family: Inter;
   font-size: 18px;
   font-weight: 600;
@@ -451,6 +460,7 @@ select {
   max-width: 768px;
   height: 82px;
   z-index: 3;
+  background-color: #fff;
 }
 .header__burger-menu_nav {
   padding-top: 120px;
@@ -473,6 +483,7 @@ select {
   justify-content: space-between;
   border-radius: 0px 0px 10px 10px;
   background-color: #f9fafb;
+  border: 1px solid #e2e8f0;
   padding: 20px;
   gap: 20px;
 }
@@ -653,6 +664,7 @@ table {
   flex-direction: column;
   margin-top: 10px;
   position: relative;
+  color: #000;
 }
 
 @media (min-width: 768px) {
@@ -790,6 +802,7 @@ table {
   font-weight: 600;
   line-height: 29px;
   letter-spacing: 0.005em;
+  color: #000;
 }
 .client_location--title {
   width: 388px;
@@ -837,6 +850,7 @@ table {
   padding-top: 5%;
   background-color: #dbeafe;
   text-align: center;
+  color: #000;
 }
 @media (min-width: 768px) {
   .lifetime__warranties--title {
@@ -936,6 +950,7 @@ table {
   border-radius: 20px;
   margin-top: 10px;
   margin-bottom: 30px;
+  overflow: hidden;
 }
 .services__card:hover {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -1240,6 +1255,74 @@ table {
   margin-bottom: 10px;
 }
 
+/* Slideshow container */
+.slideshow-container {
+  position: relative;
+  margin: auto;
+}
+@media (min-width: 768px) {
+  .slideshow-container {
+    width: 1000px;
+  }
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
 p {
   margin-top: 10px;
 }
