--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -289,7 +289,7 @@ input.invalid {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 390px;
-  height: 76px;
+  height: 55px;
   background: #fef2f2;
   border: 1px solid #ff8181;
   border-radius: 6px;
@@ -298,21 +298,11 @@ input.invalid {
   font-weight: 600;
   line-height: 22px;
   letter-spacing: 0.005em;
-  text-align: left;
-  padding: 10px;
+  text-align: center;
+  padding-top: 25px;
   z-index: 999;
   color: #991b1b;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-.popup-img {
-  position: fixed;
-  top: 40%;
-  left: 20px;
-}
-.popup-text {
-  position: fixed;
-  top: 40%;
-  left: 60px;
 }
 
 .success-message {
