--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -35,7 +35,7 @@
 .header__form {
   display: flex;
   justify-content: center;
-  max-width: 768px;
+  min-width: 430px;
   margin: 0 auto;
   background: #fff;
 }
@@ -112,7 +112,7 @@
   display: flex;
   justify-content: start;
   flex-direction: column;
-  max-width: 768px;
+  min-width: 430px;
   min-height: 100vh;
   padding: 10px;
   background-color: white;
@@ -125,6 +125,7 @@
   justify-content: center;
   flex-direction: column;
   margin: 0 auto;
+  min-width: 430px;
 }
 .tab-button {
   display: flex;
@@ -142,6 +143,11 @@
   width: 390px;
   margin: 10px 0 20px 20px;
   color: #000;
+}
+@media (min-width: 768px) {
+  .form__title {
+    width: 640px;
+  }
 }
 .form__title--radio {
   font-family: Inter;
@@ -168,6 +174,11 @@
   width: 390px;
   height: 42px;
 }
+@media (min-width: 768px) {
+  .label {
+    width: 640px;
+  }
+}
 .label:hover {
   background-color: #e5e7eb;
 }
@@ -178,8 +189,13 @@
 label {
   display: flex;
   align-items: center;
-  width: 323px;
+  width: 590px;
   height: 40px;
+}
+@media (min-width: 768px) {
+  label {
+    width: 640px;
+  }
 }
 
 .label img {
@@ -210,7 +226,12 @@ label {
   border-radius: 6px;
   border: 1px solid #e5e7eb;
   width: 390px;
-  height: 42px;
+  height: 40px;
+}
+@media (min-width: 768px) {
+  .label-2 {
+    width: 640px;
+  }
 }
 
 .label-2 input {
@@ -228,6 +249,11 @@ label {
   color: #9ca3af;
   margin: 10px 0 20px 15px;
 }
+@media (min-width: 768px) {
+  .label-2--text {
+    width: 640px;
+  }
+}
 
 .label__title {
   font-family: Inter;
@@ -235,8 +261,7 @@ label {
   font-weight: 600;
   line-height: 17px;
   letter-spacing: 0.005em;
-  margin-left: 15px;
-  margin-top: 15px;
+  margin: 0 0 15px 15px;
 }
 
 .label-2 input {
@@ -245,8 +270,29 @@ label {
   font-size: 16px;
 }
 
+.tcpa {
+  width: 430px;
+  height: 70px;
+  overflow: scroll;
+  font-family: Inter;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 12px;
+  text-align: justify;
+  margin: 0 0 15px 15px;
+}
+@media (min-width: 768px) {
+  .tcpa {
+    width: 640px;
+  }
+}
+
 input.invalid {
   background-color: #ffdddd;
+}
+
+.tcpa_link:hover {
+  color: blue;
 }
 
 #prevBtn {
@@ -369,6 +415,8 @@ input.invalid {
   align-items: center;
   position: relative;
   margin: 15px;
+  width: 390px;
+  height: 100px;
   font-family: Inter;
   font-size: 16px;
   font-weight: 500;
@@ -377,8 +425,6 @@ input.invalid {
   text-align: left;
   border-radius: 6px;
   border: 1px solid #e5e7eb;
-  width: 390px;
-  height: 100px;
 }
 
 .input__text textarea {
@@ -934,7 +980,7 @@ table {
   align-items: center;
   justify-content: center;
   width: 390px;
-  max-height: 700px;
+  max-height: 800px;
   background-color: #f9fafb;
   border: 1px solid #e5e7eb;
   border-radius: 20px;
@@ -948,7 +994,7 @@ table {
 @media (min-width: 768px) {
   .services__card {
     width: 500px;
-    height: 560px;
+    height: 750px;
     border-radius: 8px;
     justify-content: start;
   }
@@ -960,7 +1006,7 @@ table {
 }
 @media (min-width: 768px) {
   .services__card--img {
-    height: 310px;
+    height: 510px;
     -o-object-fit: cover;
        object-fit: cover;
     border-radius: 8px 8px 0 0;
