--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -80,7 +80,7 @@
   min-width: 430px;
   min-height: 100vh;
   padding: 10px;
-  background-color: white;
+  background-color: #fff;
   overflow: auto;
   margin: 0 auto;
 }
@@ -252,6 +252,9 @@ label {
 }
 
 input.invalid {
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
   background-color: #ffdddd;
 }
 
