--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -115,7 +115,7 @@
   min-width: 430px;
   min-height: 100vh;
   padding: 10px;
-  background-color: white;
+  background-color: #fff;
   overflow: auto;
   margin: 0 auto;
 }
@@ -288,6 +288,9 @@ label {
 }
 
 input.invalid {
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
   background-color: #ffdddd;
 }
 
