--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -124,6 +124,12 @@
   }
 }
 
+.dns {
+  @include onDesktop {
+    text-align: center;
+  }
+}
+
 .label {
   display: flex;
   align-items: center;
@@ -201,8 +207,15 @@ label {
 }
 
 .label-2 input {
+  width: 400px;
+  height: 100%;
+  font-size: 16px;
   border: none;
   padding-left: 10px;
+
+  @include onDesktop {
+    width: 640px;
+  }
 }
 
 .label-2--text {
@@ -220,6 +233,12 @@ label {
   }
 }
 
+.dns-text {
+  @include onDesktop {
+    text-align: center;
+  }
+}
+
 .label__title {
   font-family: Inter;
   font-size: 14px;
@@ -229,10 +248,11 @@ label {
   margin: 0 0 15px 15px;
 }
 
-.label-2 input {
-  width: 400px;
-  height: 30px;
-  font-size: 16px;
+.dns-label input {
+  @include onDesktop {
+    width: 640px;
+    height: 100%;
+  }
 }
 
 .tcpa {
@@ -373,6 +393,10 @@ input.invalid {
   letter-spacing: 0.005em;
   text-align: center;
   color: #000;
+
+  @include onDesktop {
+    width: 640px;
+  }
 }
 
 .do_not_sell {
@@ -383,6 +407,10 @@ input.invalid {
   padding-bottom: 20px;
   margin-top: 20px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+  @include onDesktop {
+    width: 670px;
+  }
 }
 
 .input__text {
@@ -401,6 +429,10 @@ input.invalid {
   text-align: left;
   border-radius: 6px;
   border: 1px solid #e5e7eb;
+
+  @include onDesktop {
+    width: 640px;
+  }
 }
 
 .input__text textarea {
@@ -412,6 +444,10 @@ select {
   width: 390px;
   height: 35px;
   border: none;
+
+  @include onDesktop {
+    width: 100%;
+  }
 }
 
 #sendText {
