--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -158,6 +158,12 @@
   margin: 0 0 15px 15px;
 }
 
+@media (min-width: 768px) {
+  .dns {
+    text-align: center;
+  }
+}
+
 .label {
   display: flex;
   align-items: center;
@@ -235,8 +241,16 @@ label {
 }
 
 .label-2 input {
+  width: 400px;
+  height: 100%;
+  font-size: 16px;
   border: none;
   padding-left: 10px;
+}
+@media (min-width: 768px) {
+  .label-2 input {
+    width: 640px;
+  }
 }
 
 .label-2--text {
@@ -255,6 +269,12 @@ label {
   }
 }
 
+@media (min-width: 768px) {
+  .dns-text {
+    text-align: center;
+  }
+}
+
 .label__title {
   font-family: Inter;
   font-size: 14px;
@@ -264,10 +284,11 @@ label {
   margin: 0 0 15px 15px;
 }
 
-.label-2 input {
-  width: 400px;
-  height: 30px;
-  font-size: 16px;
+@media (min-width: 768px) {
+  .dns-label input {
+    width: 640px;
+    height: 100%;
+  }
 }
 
 .tcpa {
@@ -402,6 +423,11 @@ input.invalid {
   text-align: center;
   color: #000;
 }
+@media (min-width: 768px) {
+  .submit-button {
+    width: 640px;
+  }
+}
 
 .do_not_sell {
   width: 420px;
@@ -411,6 +437,11 @@ input.invalid {
   padding-bottom: 20px;
   margin-top: 20px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+@media (min-width: 768px) {
+  .do_not_sell {
+    width: 670px;
+  }
 }
 
 .input__text {
@@ -429,6 +460,11 @@ input.invalid {
   border-radius: 6px;
   border: 1px solid #e5e7eb;
 }
+@media (min-width: 768px) {
+  .input__text {
+    width: 640px;
+  }
+}
 
 .input__text textarea {
   border: none;
@@ -439,6 +475,11 @@ select {
   width: 390px;
   height: 35px;
   border: none;
+}
+@media (min-width: 768px) {
+  select {
+    width: 100%;
+  }
 }
 
 #sendText {
