--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -78,11 +78,10 @@
   justify-content: start;
   flex-direction: column;
   min-width: 430px;
-  min-height: 100vh;
+  height: 100vh;
   padding: 10px;
   background-color: #fff;
-  overflow: auto;
-  margin: 0 auto;
+  overflow: scroll;
 }
 
 .tab {
@@ -207,11 +206,12 @@ label {
 }
 
 .label-2 input {
-  width: 400px;
-  height: 100%;
+  width: 395px;
+  height: 25px;
   font-size: 16px;
   border: none;
   padding-left: 10px;
+  border-radius: 10px;
 
   @include onDesktop {
     width: 640px;
@@ -256,7 +256,7 @@ label {
 }
 
 .tcpa {
-  width: 430px;
+  width: 390px;
   height: 70px;
   overflow: scroll;
   font-family: Inter;
