mobile_version_+_desktop_with_tcpa

--- a/src/styles/blocks/_buttons.scss
+++ b/src/styles/blocks/_buttons.scss
@@ -30,3 +30,11 @@
   width: 389px;
   margin-top: $margin-top;
 }
+
+.last {
+  margin-bottom: 20px;
+
+  @include onDesktop {
+    margin-bottom: 30px;
+  }
+}
