--- a/src/styles/blocks/_shower_accessories.scss
+++ b/src/styles/blocks/_shower_accessories.scss
@@ -139,6 +139,12 @@ p {
   }
 }
 
+.hidden-br {
+  @include onDesktop {
+    display: none;
+  }
+}
+
 .accessories__text {
   font-family: Inter;
   font-size: 18px;
