--- a/src/styles/blocks/_customer_reviews.scss
+++ b/src/styles/blocks/_customer_reviews.scss
@@ -35,6 +35,8 @@
 
       @include onDesktop {
         font-size: 36px;
+        margin-top: 64px;
+        margin-bottom: 48px;
       }
     }
 
@@ -49,6 +51,13 @@
       margin-top: 30px;
       margin-bottom: 20px;
       z-index: 0;
+
+      @include onDesktop {
+        width: 944px;
+        font-size: 36px;
+        margin-top: 63px;
+        margin-bottom: 64px;
+      }
     }
   }
 
