--- a/src/styles/blocks/_section.scss
+++ b/src/styles/blocks/_section.scss
@@ -97,6 +97,12 @@
   margin: 5px 5px;
   margin-top: 16px;
   text-align: center;
+  margin-bottom: 20px;
+
+  @include onDesktop {
+    margin-bottom: 48px;
+    justify-content: center;
+  }
 
   &--item {
     width: 117px;
@@ -131,7 +137,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 40px;
+  // margin-top: 40px;
   text-align: center;
   font-family: Inter;
   font-size: 24px;
@@ -147,7 +153,6 @@
     @include onDesktop {
       width: 780px;
     }
-
   }
 
   @include onDesktop {
@@ -213,7 +218,7 @@
         margin-bottom: 15px;
 
         @include onDesktop {
-          font-size: 36px;
+          font-size: 24px;
           line-height: 43px;
         }
       }
