--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -1,3 +1,14 @@
+.form-container {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  min-width: 430px;
+  height: 100vh;
+  padding: 10px;
+  background-color: #fff;
+}
+
 .header__form {
   display: flex;
   justify-content: center;
@@ -16,10 +27,6 @@
   padding: 0px 20px 0px 20px;
   border: 1px solid #e2e8f0;
   border-radius: 0px 0px 10px 10px;
-}
-
-.logo_img {
-  width: 116px;
 }
 
 .icon--menu {
@@ -70,18 +77,7 @@
   min-height: 100vh;
   overflow: auto;
   z-index: 3;
-}
-
-.form-container {
-  box-sizing: border-box;
-  display: flex;
-  justify-content: start;
-  flex-direction: column;
-  min-width: 430px;
-  height: 100vh;
-  padding: 10px;
-  background-color: #fff;
-  overflow: scroll;
+  background: #fff;
 }
 
 .tab {
