--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -41,6 +41,17 @@
   }
 }
 
+.form-container {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  min-width: 430px;
+  height: 100vh;
+  padding: 10px;
+  background-color: #fff;
+}
+
 .header__form {
   display: flex;
   justify-content: center;
@@ -59,10 +70,6 @@
   padding: 0px 20px 0px 20px;
   border: 1px solid #e2e8f0;
   border-radius: 0px 0px 10px 10px;
-}
-
-.logo_img {
-  width: 116px;
 }
 
 .icon--menu {
@@ -114,18 +121,7 @@
   min-height: 100vh;
   overflow: auto;
   z-index: 3;
-}
-
-.form-container {
-  box-sizing: border-box;
-  display: flex;
-  justify-content: start;
-  flex-direction: column;
-  min-width: 430px;
-  height: 100vh;
-  padding: 10px;
-  background-color: #fff;
-  overflow: scroll;
+  background: #fff;
 }
 
 .tab {
@@ -549,7 +545,6 @@ select {
   max-width: 768px;
   height: 82px;
   z-index: 3;
-  background-color: #fff;
 }
 .header__burger-menu_nav {
   padding-top: 120px;
@@ -575,10 +570,6 @@ select {
   border: 1px solid #e2e8f0;
   padding: 20px;
   gap: 20px;
-}
-
-.logo_img {
-  width: 116px;
 }
 
 .icon--menu {
