--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -247,7 +247,7 @@ label {
 .dns-label input {
   @include onDesktop {
     width: 640px;
-    height: 100%;
+    height: 95%;
   }
 }
 
@@ -396,6 +396,7 @@ input.invalid {
 }
 
 .do_not_sell {
+  font-family: Inter;
   width: 420px;
   margin: 0 auto;
   border: 1px solid #ccc;
