--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -292,7 +292,7 @@ label {
 @media (min-width: 768px) {
   .dns-label input {
     width: 640px;
-    height: 100%;
+    height: 95%;
   }
 }
 
@@ -435,6 +435,7 @@ input.invalid {
 }
 
 .do_not_sell {
+  font-family: Inter;
   width: 420px;
   margin: 0 auto;
   border: 1px solid #ccc;
@@ -545,6 +546,7 @@ select {
   max-width: 768px;
   height: 82px;
   z-index: 3;
+  background-color: #fff;
 }
 .header__burger-menu_nav {
   padding-top: 120px;
