--- a/src/styles/blocks/_buttons.scss
+++ b/src/styles/blocks/_buttons.scss
@@ -5,7 +5,7 @@
   background-color: #fbdf8d;
   border: none;
   border-radius: 6px;
-  font-size: 16px;
+  font-size: 20px;
   color: #000;
   font-weight: 600;
   line-height: 21.78px;
@@ -18,7 +18,9 @@
   width: 124px;
   height: 42px;
   margin: 0px 0px 5px 0px;
+  padding: 0;
   background-color: #2595eb;
+  font-size: 20px;
 }
 
 .medium {
