--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -54,8 +54,8 @@
   height: 2px;
   width: 15px;
   transform: rotate(45deg);
-  top: 36px;
-  right: 32px;
+  top: 37%;
+  left: 2%;
 }
 
 .form-line2 {
@@ -63,8 +63,8 @@
   height: 2px;
   width: 15px;
   transform: rotate(-45deg);
-  top: 36px;
-  right: 32px;
+  top: 37%;
+  left: 2%;
 }
 /* !!!!!!  Popup form - схована за замовчуванням  */
 .form-popup {
@@ -288,7 +288,7 @@ input.invalid {
 
   color: #000;
   font-family: Inter;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: 600;
   line-height: 18px;
   letter-spacing: 0.005em;
@@ -305,7 +305,7 @@ input.invalid {
   cursor: pointer;
 
   font-family: Inter;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: 600;
   line-height: 18px;
   letter-spacing: 0.005em;
@@ -383,7 +383,7 @@ input.invalid {
   cursor: pointer;
 
   font-family: Inter;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: 600;
   line-height: 18px;
   letter-spacing: 0.005em;
