--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -171,7 +171,7 @@ label {
   margin-right: 10px;
 }
 
-.label + input {
+.label input {
   position: absolute;
   right: 10px;
  
@@ -203,11 +203,11 @@ label {
 
 .label-2 input {
   width: 395px;
-  height: 25px;
+  height: 39px;
   font-size: 16px;
   border: none;
   padding-left: 10px;
-  border-radius: 10px;
+  border-radius: 6px;
 
   @include onDesktop {
     width: 640px;
