--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -203,11 +203,17 @@ label {
 
 .label-2 input {
   width: 395px;
-  height: 39px;
+  height: 30px;
   font-size: 16px;
   border: none;
   padding-left: 10px;
   border-radius: 6px;
+
+  &:focus {
+    outline: none;
+    border: 2px solid #5584e3;
+
+  }
 
   @include onDesktop {
     width: 640px;
