--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -248,11 +248,15 @@ label {
 
 .label-2 input {
   width: 395px;
-  height: 39px;
+  height: 30px;
   font-size: 16px;
   border: none;
   padding-left: 10px;
   border-radius: 6px;
+}
+.label-2 input:focus {
+  outline: none;
+  border: 2px solid #5584e3;
 }
 @media (min-width: 768px) {
   .label-2 input {
