--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   scroll-behavior: smooth;
+  // height: 100%;
 }
 
 .header, .main, .footer, .form__conteiner {
@@ -13,4 +14,8 @@
   @include onDesktop {
     max-width: 1440px;
   }
+}
+
+.footer {
+  flex: 0 0 auto;
 }
