--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -447,11 +447,31 @@ input.invalid {
   border: 1px solid #ccc;
   border-radius: 8px;
   padding-bottom: 20px;
-  margin-top: 20px;
+  margin-top: 70px;
+  margin-bottom: 70px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 @media (min-width: 768px) {
   .do_not_sell {
+    width: 670px;
+    margin-top: 80px;
+    margin-bottom: 80px;
+  }
+}
+
+.contact_us {
+  font-family: Inter;
+  width: 420px;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding-bottom: 20px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+@media (min-width: 768px) {
+  .contact_us {
     width: 670px;
   }
 }
@@ -757,6 +777,10 @@ table {
   .header, .main, .footer, .form__conteiner {
     max-width: 1440px;
   }
+}
+
+.footer {
+  flex: 0 0 auto;
 }
 
 .title {
@@ -2444,7 +2468,7 @@ p {
   display: flex;
   flex-direction: column;
   align-items: start;
-  height: 215px;
+  height: 220px;
   gap: 10px;
   margin-top: 40px;
   padding-top: 20px;
