--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -447,8 +447,7 @@ input.invalid {
   border: 1px solid #ccc;
   border-radius: 8px;
   padding-bottom: 20px;
-  margin-top: 70px;
-  margin-bottom: 70px;
+  margin-top: 10%;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 @media (min-width: 768px) {
@@ -462,6 +461,7 @@ input.invalid {
 .contact_us {
   font-family: Inter;
   width: 420px;
+  min-height: 100%;
   margin: 0 auto;
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -777,10 +777,6 @@ table {
   .header, .main, .footer, .form__conteiner {
     max-width: 1440px;
   }
-}
-
-.footer {
-  flex: 0 0 auto;
 }
 
 .title {
@@ -2541,4 +2537,10 @@ p {
     left: 35%;
     text-decoration: none;
   }
+}
+.footer-contact {
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
 }/*# sourceMappingURL=main.css.map */
